hacky prevention of graph overflowing into cardheader

--- a/client/lampenhaus/src/components/Graph/D3Network/moduleStyles.css
+++ b/client/lampenhaus/src/components/Graph/D3Network/moduleStyles.css
@@ -1,10 +1,9 @@
 .network {
-    height: 100%;
+    height: 92%;
     width: 100%;
     position: absolute;
     left: 0;
     right: 0;
-    top: 0;
     bottom: 0;
 }
 
