--- a/client/lampenhaus/src/components/Graph/Graph.css
+++ b/client/lampenhaus/src/components/Graph/Graph.css
@@ -6,7 +6,6 @@ main {
 
 #relayout-button {
     z-index: 1;
-    position: absolute;
-    top: 10px;
-    right: 10px
+    position: relative;
+    left: calc(100% - 30px);
 }
